src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/ARBBlendFuncExtended_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBBlendFuncExtended_StringErrorContext.class */
public final class ARBBlendFuncExtended_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglBindFragDataLocationIndexed(IIIJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBBlendFuncExtendedErrorContext");
        methods.put("glBindFragDataLocationIndexed(IIILjava/nio/ByteBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBBlendFuncExtendedErrorContext");
        methods.put("glBindFragDataLocationIndexed(IIILjava/lang/CharSequence;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBBlendFuncExtendedErrorContext");
        methods.put("nglGetFragDataIndex(IJ)I", "net/labymod/core/laby3d/opengl/error/generated/ARBBlendFuncExtendedErrorContext");
        methods.put("glGetFragDataIndex(ILjava/nio/ByteBuffer;)I", "net/labymod/core/laby3d/opengl/error/generated/ARBBlendFuncExtendedErrorContext");
        methods.put("glGetFragDataIndex(ILjava/lang/CharSequence;)I", "net/labymod/core/laby3d/opengl/error/generated/ARBBlendFuncExtendedErrorContext");
        return methods;
    }
}
